--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,6 @@ img {
 }
 .container {
   max-width: 1200px;
-  min-width: 1200px;
   margin: 0 auto;
 }
 .visually-hidden {
@@ -81,6 +80,7 @@ img {
   transition: background-color 0.3s;
   cursor: pointer;
   font-family: "PT Sans";
+  text-align: center;
 }
 .button--brown {
   background-color: #756157;
@@ -108,6 +108,30 @@ img {
   background-color: #82b3d3;
   color: rgba(255, 255, 255, 0.3);
 }
+.button--transparent {
+  background-color: transparent;
+}
+.button--transparent:hover {
+  color: rgba(255, 255, 255, 0.6);
+}
+.button--transparent:focus {
+  color: #ffffff;
+  border-color: #83b3d3;
+}
+.button--transparent:active {
+  color: rgba(255, 255, 255, 0.3);
+}
+.button--green {
+  background-color: #7db54f;
+}
+.button--green:hover,
+.button--green:focus {
+  background-color: #6c9e42;
+}
+.button--green:active {
+  background-color: #7db54f;
+  color: rgba(255, 255, 255, 0.3);
+}
 .main-header {
   padding: 0 70px;
   display: grid;
@@ -127,10 +151,10 @@ img {
   margin-left: 10px;
 }
 .navigation__item {
-  padding: 20px 15px;
+  padding: 20px 16px;
 }
 .navigation__link {
-  font-size: 21px;
+  font-size: 20px;
   line-height: 24px;
   font-weight: 700;
   color: #000000;
@@ -145,9 +169,6 @@ img {
   position: absolute;
   left: 0;
   bottom: -21px;
-}
-.navigation__link:hover::after {
-  background-color: #756257;
 }
 .navigation__link--active::after {
   background-color: #756257;
@@ -171,7 +192,7 @@ img {
   width: 20px;
   height: 20px;
   border-radius: 100%;
-  background-color: #7d854f;
+  background-color: #7db54f;
   font-size: 10px;
   line-height: 20px;
   color: #ffffff;
@@ -206,6 +227,7 @@ img {
   max-width: 652px;
   margin: 0 auto 20px;
   text-align: center;
+  color: #000000;
 }
 .main-subtitle {
   font-size: 22px;
@@ -214,6 +236,7 @@ img {
   max-width: 652px;
   text-align: center;
   font-weight: 400;
+  color: #333333;
 }
 .main-advantages__title {
   margin-bottom: 25px;
@@ -325,14 +348,14 @@ img {
   line-height: 21px;
   margin: 0;
 }
-.features__item:first-child {
+.features__item--home {
   background: rgba(131, 179, 211, 0.1) url(../img/house.svg) no-repeat center
     80px;
 }
-.features__item:nth-child(2) {
+.features__item--meal {
   background: #ffffff url(../img/burger.svg) no-repeat center 80px;
 }
-.features__item:last-child {
+.features__item--gift {
   background: rgba(131, 179, 211, 0.1) url(../img/gift.svg) no-repeat center
     80px;
 }
@@ -353,6 +376,12 @@ img {
   padding: 96px 0 104px;
   text-align: center;
   background: url(../img/form-bg.jpg) no-repeat;
+  color: #ffffff;
+}
+.main-subcribe .main-title {
+  color: #ffffff;
+}
+.main-subcribe .main-subtitle {
   color: #ffffff;
 }
 .main-subcribe__desc {
@@ -377,6 +406,7 @@ img {
 .subcribe-form__button {
   border-radius: 0 4px 4px 0;
   font-size: 20px;
+  padding: 16px 34px;
 }
 .main-subcribe__form {
   margin-top: 54px;
@@ -384,7 +414,7 @@ img {
 .footer {
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-end;
   padding: 45px 70px 35px;
   background-color: #ffffff;
 }
@@ -508,15 +538,11 @@ img {
   line-height: 24px;
   font-weight: 700;
 }
-input::-moz-placeholder {
-  color: #000000;
+input::placeholder {
+  color: rgba(0, 0, 0, 0.6);
+  font-family: "PT Sans", Arial, sans-serif;
 }
-input::-webkit-input-placeholder {
-  color: #000000;
-}
-input:-ms-input-placeholder {
-  color: #000000;
-}
+
 .form__bottom {
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -603,4 +629,344 @@ input[type="number"]:hover,
 input[type="number"]:focus {
   appearance: none;
   -moz-appearance: textfield;
+}
+
+.page-container {
+  max-width: 1060px;
+  margin: 0 auto;
+}
+.filter {
+  padding: 35px 0 70px;
+  background: url(../img/filter-bg.jpg) no-repeat;
+  background-size: cover;
+  color: #ffffff;
+}
+.filter__title {
+  font-size: 60px;
+  line-height: 78px;
+  font-weight: bold;
+  margin: 0 0 8px;
+}
+.breadcrumbs {
+  display: flex;
+  align-items: center;
+  gap: 28px;
+  margin-bottom: 40px;
+}
+.breadcrumbs__link {
+  display: block;
+}
+.breadcrumbs__item {
+  position: relative;
+  font-size: 16px;
+  line-height: 21px;
+}
+.breadcrumbs__item:not(:last-child)::after {
+  content: "";
+  display: block;
+  width: 7px;
+  height: 10px;
+  position: absolute;
+  right: -18px;
+  top: 50%;
+  transform: translateY(-50%);
+  background: url(../img/arrow-bread.svg) no-repeat;
+}
+.filter__wrap {
+  display: grid;
+  grid-template-columns: 151px 151px 1fr 191px;
+  justify-content: space-between;
+  gap: 70px;
+}
+.filter__range {
+  padding-left: 70px;
+}
+.filter__desc {
+  font-size: 20px;
+  line-height: 24px;
+  font-weight: 700;
+  margin-bottom: 32px;
+}
+.filter__item:not(:last-child) {
+  margin-bottom: 15px;
+}
+.checkbox__name {
+  font-size: 18px;
+  line-height: 23px;
+  position: relative;
+  padding-left: 36px;
+}
+.checkbox__name::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 20px;
+  height: 20px;
+  border: none;
+  background-color: #ffffff;
+  cursor: pointer;
+}
+.checkbox__name--check::before {
+  border-radius: 4px;
+}
+.checkbox__name--radio::before {
+  border-radius: 100%;
+}
+.checkbox__name::after {
+  content: "";
+  position: absolute;
+  opacity: 0;
+}
+.checkbox__name--check::after {
+  left: 4px;
+  top: 7px;
+  width: 13px;
+  height: 10px;
+  background: url(../img/check.svg) no-repeat;
+}
+.checkbox__name--radio::after {
+  left: 5px;
+  top: 7px;
+  width: 10px;
+  height: 10px;
+  background-color: #3f5e72;
+  border-radius: 100%;
+}
+.checkbox input:checked + .checkbox__name::after {
+  opacity: 1;
+}
+.filter__right {
+  display: grid;
+  grid-template-columns: 288px 191px;
+  gap: 20px 70px;
+}
+.range-filter__wrap {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 2px;
+}
+.range__price {
+  position: relative;
+}
+.range:first-child .range__input {
+  border-radius: 4px 0 0 4px;
+}
+.range:last-child .range__input {
+  border-radius: 0 4px 4px 0;
+}
+.range__input {
+  width: 100%;
+  height: 48px;
+  padding: 0 30px 0 20px;
+  border: none;
+  font-size: 18px;
+  line-height: 24px;
+  font-weight: 700;
+  color: #000000;
+  font-family: "PT Sans";
+}
+.range__name {
+  position: absolute;
+  font-size: 18px;
+  line-height: 24px;
+  color: rgba(0, 0, 0, 0.3);
+  z-index: 2;
+  right: 20px;
+  top: 12px;
+}
+.range__controls {
+  width: 100%;
+  position: relative;
+  margin-top: 45px;
+}
+.range__scale {
+  width: 100%;
+  height: 4px;
+  background-color: rgba(255, 255, 255, 0.3);
+}
+.range__bar {
+  width: 72%;
+  height: 100%;
+  background-color: #ffffff;
+}
+.range__toggle {
+  position: absolute;
+  top: -8px;
+  width: 20px;
+  height: 20px;
+  background-color: #ffffff;
+  cursor: pointer;
+  padding: 0;
+  border: none;
+  border-radius: 5px;
+}
+.filter__buttons .button {
+  width: 100%;
+}
+.filter__reset {
+  margin-top: 32px;
+}
+.range__toggle--max {
+  left: 72%;
+}
+.filter__buttons {
+  padding-top: 56px;
+}
+.catalog__nav {
+  margin-top: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.catalog__title {
+  font-size: 30px;
+  line-height: 36px;
+  font-weight: 700;
+  margin: 0;
+  text-transform: uppercase;
+}
+.catalog__select {
+  margin: 0 70px 0 auto;
+  width: 292px;
+  padding: 11px 0 12px 17px;
+  border: 2px solid #e5e5e5;
+  border-radius: 4px;
+  font-family: "PT Sans", sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 21px;
+  background: url(../img/arrow-select.svg) no-repeat right 20px center;
+  appearance: none;
+  -webkit-appearance: none;
+}
+.catalog__buttons {
+  display: flex;
+  gap: 8px;
+}
+.sort-buttons__item {
+  width: 48px;
+  height: 48px;
+  border-radius: 4px;
+  border: 2px solid #e5e5e5;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.sort-buttons__item--active {
+  border-color: #000000;
+}
+.catalog-list {
+  margin-top: 40px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
+  padding-bottom: 40px;
+  border-bottom: 1px solid #e5e5e5;
+}
+.catalog-list__item {
+  padding: 19px 20px 18px 20px;
+  border: 1px solid #e5e5e5;
+  border-radius: 4px;
+}
+.catalog-list__title {
+  margin: 12px 0 0 0;
+  font-size: 24px;
+  line-height: 28px;
+  color: #000000;
+  font-weight: bold;
+}
+.catalog-list__bottom {
+  display: flex;
+  justify-content: space-between;
+  gap: 20px;
+  margin-top: 16px;
+}
+.catalog-list__desc {
+  margin: 0;
+  font-size: 18px;
+  line-height: 21px;
+}
+.catalog-list__buttons {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 20px;
+  margin-top: 16px;
+}
+.catalog-list__buttons .button {
+  padding: 8px 18px;
+}
+.catalog-list__rating {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 16px;
+}
+.rating-list__star {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 6px;
+}
+.rating-list__logo {
+  background-image: url(../img/star.svg);
+  width: 18px;
+  height: 17px;
+}
+.rating-list__number {
+  padding: 9px 22px 9px 23px;
+  background-color: #f2f2f2;
+  border-radius: 4px;
+  font-size: 16px;
+  line-height: 20px;
+  text-transform: uppercase;
+}
+.pagination {
+  display: flex;
+  gap: 8px;
+  margin-top: 40px;
+}
+.pagination__link {
+  width: 60px;
+  height: 60px;
+  display: block;
+  font-size: 20px;
+  line-height: 36px;
+  font-weight: 700;
+  text-transform: uppercase;
+  background-color: #82b3d3;
+  color: #ffffff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.pagination__link:hover {
+  background-color: #68a2ca;
+}
+.pagination-item-active .pagination__link {
+  color: #000000;
+  background-color: #f2f2f2;
+}
+.pagination__hero {
+  width: 60px;
+  height: 60px;
+  font-size: 22px;
+  line-height: 26px;
+  padding-top: 15px;
+  display: block;
+  text-align: center;
+}
+.page-subcribe {
+  background: none;
+  padding-top: 155px;
+}
+.page-subcribe .main-title {
+  color: #000000;
+}
+.page-subcribe .main-subtitle {
+  color: #333333;
+}
+.page-subcribe .subcribe-form__wrap input {
+  background-color: #f2f2f2;
 }
