--- a/style.css
+++ b/style.css
@@ -25,17 +25,22 @@
   color: #333333;
   background-color: #eeeeee;
   position: relative;
+  min-width: 1200px;
+  height: 100%;
+}
+.page {
+  height: 100%;
 }
 .page-wrap {
   background-color: #ffffff;
   min-height: 100%;
-  display: grid;
-  grid-template-rows: min-content 1fr min-content;
+  display: flex;
+  flex-direction: column;
   align-content: start;
-  box-shadow: 0px 0 15px rgba(0, 1, 1, 0.2);
+  box-shadow: 0 0 15px rgba(0, 1, 1, 0.2);
   position: relative;
 }
-a {
+.page-body a {
   text-decoration: none;
 }
 img {
@@ -73,6 +78,9 @@ img {
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
+.main {
+  flex-grow: 1;
+}
 .button {
   border: none;
   padding: 8px 34px;
@@ -84,7 +92,7 @@ img {
   text-transform: uppercase;
   transition: background-color 0.3s;
   cursor: pointer;
-  font-family: "PT Sans";
+  font-family: "PT Sans", Arial, sans-serif;
   text-align: center;
 }
 .button--brown {
@@ -145,6 +153,8 @@ img {
   align-items: center;
   position: relative;
   z-index: 1;
+  flex-grow: 0;
+  flex-shrink: 0;
 }
 .main-header__logo {
   display: block;
@@ -211,7 +221,7 @@ img {
 .main-banner {
   height: 485px;
   padding: 50px 0 82px;
-  background: url(../img/welcome-bg.jpg) no-repeat;
+  background: #273744 url(../img/welcome-bg.jpg) no-repeat;
   text-align: center;
   position: relative;
 }
@@ -291,16 +301,20 @@ img {
   margin: 0 0 30px;
   position: relative;
   max-width: 175px;
+  color: #000000;
 }
 .advantages-card__title::after {
   content: "";
   position: absolute;
   width: 60px;
   height: 2px;
-  background-color: #000;
+  background-color: rgba(0, 0, 0, 0.3);
   left: 50%;
   transform: translateX(-50%);
   bottom: 0;
+}
+.advantages-card--blue .advantages-card__title {
+  color: #ffffff;
 }
 .advantages-card__text {
   max-width: 230px;
@@ -322,7 +336,7 @@ img {
   color: #ffffff;
 }
 .advantages-card--blue .advantages-card__title::after {
-  background-color: #ffffff;
+  background-color: rgba(255, 255, 255, 0.3);
 }
 .main-features__title {
   max-width: 505px;
@@ -380,7 +394,7 @@ img {
 .main-subcribe {
   padding: 96px 0 104px;
   text-align: center;
-  background: url(../img/form-bg.jpg) no-repeat;
+  background: #273744 url(../img/form-bg.jpg) no-repeat;
   color: #ffffff;
 }
 .main-subcribe .main-title {
@@ -419,9 +433,11 @@ img {
 .footer {
   display: flex;
   justify-content: space-between;
-  align-items: flex-end;
+  align-items: center;
   padding: 45px 70px 35px;
   background-color: #ffffff;
+  flex-grow: 0;
+  flex-shrink: 0;
 }
 .footer__social {
   width: 142px;
@@ -438,11 +454,28 @@ img {
 .social-list__item:first-child .social-list__link {
   background: url(../img/vk.svg) no-repeat center center;
 }
+.social-list__item:first-child .social-list__link:hover,
+.social-list__item:first-child .social-list__link:focus {
+  background: url(../img/vk-hover.svg) no-repeat center center;
+}
+.social-list__item:first-child .social-list__link:active,
+.social-list__item:nth-child(2) .social-list__link:active,
+.social-list__item:last-child .social-list__link:active {
+  opacity: 0.3;
+}
 .social-list__item:nth-child(2) .social-list__link {
   background: url(../img/tg.svg) no-repeat center center;
 }
+.social-list__item:nth-child(2) .social-list__link:hover,
+.social-list__item:nth-child(2) .social-list__link:focus {
+  background: url(../img/tg-hover.svg) no-repeat center center;
+}
 .social-list__item:last-child .social-list__link {
   background: url(../img/tube.svg) no-repeat center center;
+}
+.social-list__item:last-child .social-list__link:hover,
+.social-list__item:last-child .social-list__link:focus {
+  background: url(../img/tube-hover.svg) no-repeat center center;
 }
 .footer__phonewrap {
   width: 331px;
@@ -453,6 +486,27 @@ img {
   text-transform: uppercase;
   color: #000000;
 }
+.footer__phone:hover,
+.footer__phone:focus {
+  color: #756157;
+}
+.footer__phone:active {
+  color: rgba(117, 97, 87, 0.3);
+}
+.footer__logo {
+  display: block;
+  width: 115px;
+  height: 33px;
+}
+.footer__logo:hover img {
+  display: none;
+}
+.footer__logo:hover {
+  background: url(../img/logo-footer-hover.svg) no-repeat;
+}
+.footer__logo:active {
+  opacity: 0.3;
+}
 .form-wrap {
   position: absolute;
   width: 100%;
@@ -461,6 +515,8 @@ img {
   left: 0;
   background-color: rgba(242, 242, 242, 0.8);
   z-index: 3;
+}
+.form-wrap--hidden {
   display: none;
 }
 .form-wrap__block {
@@ -498,7 +554,7 @@ img {
   display: grid;
   grid-template-columns: 120px 1fr;
   align-items: center;
-  gap: 0 24px;
+  gap: 0 18px;
   margin-bottom: 48px;
 }
 .form__calendar {
@@ -507,7 +563,7 @@ img {
   padding: 0;
   border: none;
   position: absolute;
-  right: 17px;
+  right: 21px;
   background: url(../img/date.svg) no-repeat;
   top: 50%;
   transform: translateY(-50%);
@@ -519,7 +575,7 @@ img {
   padding: 0 20px;
   background-color: #f2f2f2;
   border-radius: 4px;
-  font-size: 20px;
+  font-size: 18px;
   line-height: 24px;
   font-weight: 700;
   color: #000000;
@@ -547,11 +603,13 @@ input::placeholder {
   color: rgba(0, 0, 0, 0.6);
   font-family: "PT Sans", Arial, sans-serif;
 }
-
+.form__input input::placeholder {
+  color: #000000;
+}
 .form__bottom {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  gap: 48px 88px;
+  gap: 48px 90px;
 }
 .input-number {
   display: flex;
@@ -592,13 +650,13 @@ input::placeholder {
 .tooltip__text {
   position: absolute;
   width: 256px;
-  padding: 15px 18px 18px 22px;
+  padding: 20px 18px 23px 22px;
   background-color: #333333;
   font-size: 16px;
   line-height: 20px;
   color: #ffffff;
   text-align: left;
-  font-family: "PT Sans";
+  font-family: "PT Sans", Arial, sans-serif;
   border-radius: 10px;
   top: calc(100% + 15px);
   left: 50%;
@@ -620,7 +678,7 @@ input::placeholder {
 }
 .form__button {
   width: 100%;
-  padding: 18px 34px;
+  padding: 20px 34px;
   font-size: 20px;
   border-radius: 10px;
 }
@@ -637,12 +695,13 @@ input[type="number"]:focus {
 }
 
 .page-container {
-  max-width: 1060px;
+  max-width: 1200px;
   margin: 0 auto;
+  padding: 0 70px;
 }
 .filter {
-  padding: 35px 0 70px;
-  background: url(../img/filter-bg.jpg) no-repeat;
+  padding: 35px 70px 70px;
+  background: #273744 url(../img/filter-bg.jpg) no-repeat;
   background-size: cover;
   color: #ffffff;
 }
@@ -660,6 +719,13 @@ input[type="number"]:focus {
 }
 .breadcrumbs__link {
   display: block;
+}
+.breadcrumbs__link:hover,
+.breadcrumbs__link:focus-visible {
+  opacity: 0.6;
+}
+.breadcrumbs__link:active {
+  opacity: 0.3;
 }
 .breadcrumbs__item {
   position: relative;
@@ -681,7 +747,7 @@ input[type="number"]:focus {
   display: grid;
   grid-template-columns: 151px 151px 1fr 191px;
   justify-content: space-between;
-  gap: 70px;
+  gap: 69px;
 }
 .filter__range {
   padding-left: 70px;
@@ -700,18 +766,27 @@ input[type="number"]:focus {
   line-height: 23px;
   position: relative;
   padding-left: 36px;
+  cursor: pointer;
+  color: #ffffff;
+  display: block;
 }
 .checkbox__name::before {
   content: "";
   position: absolute;
   left: 0;
-  top: 50%;
-  transform: translateY(-50%);
+  top: 2px;
   width: 20px;
   height: 20px;
   border: none;
   background-color: #ffffff;
   cursor: pointer;
+  transition: background-color 0.3s;
+}
+.checkbox__name:hover::before {
+  background-color: rgba(242, 242, 242, 0.6);
+}
+.checkbox__name:hover {
+  color: rgba(242, 242, 242, 0.6);
 }
 .checkbox__name--check::before {
   border-radius: 4px;
@@ -742,6 +817,15 @@ input[type="number"]:focus {
 .checkbox input:checked + .checkbox__name::after {
   opacity: 1;
 }
+.checkbox input:focus-visible + .checkbox__name::before {
+  border: 3px solid #83b3d3;
+}
+.checkbox input:active + .checkbox__name::before {
+  background-color: rgba(242, 242, 242, 0.3);
+}
+.checkbox input:active + .checkbox__name {
+  color: rgba(242, 242, 242, 0.3);
+}
 .filter__right {
   display: grid;
   grid-template-columns: 288px 191px;
@@ -755,22 +839,22 @@ input[type="number"]:focus {
 .range__price {
   position: relative;
 }
-.range:first-child .range__input {
+.range__price:first-child .range__input {
   border-radius: 4px 0 0 4px;
 }
-.range:last-child .range__input {
+.range__price:last-child .range__input {
   border-radius: 0 4px 4px 0;
 }
 .range__input {
   width: 100%;
   height: 48px;
-  padding: 0 30px 0 20px;
+  padding: 0 41px 0 20px;
   border: none;
   font-size: 18px;
   line-height: 24px;
   font-weight: 700;
   color: #000000;
-  font-family: "PT Sans";
+  font-family: "PT Sans", Arial, sans-serif;
 }
 .range__name {
   position: absolute;
@@ -807,6 +891,16 @@ input[type="number"]:focus {
   border: none;
   border-radius: 5px;
 }
+.range__toggle:hover {
+  box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.25);
+}
+.range__toggle:focus-visible {
+  box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.25);
+}
+.range__toggle:active {
+  box-shadow: 0 7px 15px 0 rgba(0, 0, 0, 0.4);
+  border: 2px solid #83b3d3;
+}
 .filter__buttons .button {
   width: 100%;
 }
@@ -818,6 +912,9 @@ input[type="number"]:focus {
 }
 .filter__buttons {
   padding-top: 56px;
+}
+.catalog {
+  padding: 0 70px;
 }
 .catalog__nav {
   margin-top: 50px;
@@ -831,6 +928,7 @@ input[type="number"]:focus {
   font-weight: 700;
   margin: 0;
   text-transform: uppercase;
+  color: #000000;
 }
 .catalog__select {
   margin: 0 70px 0 auto;
@@ -838,13 +936,22 @@ input[type="number"]:focus {
   padding: 11px 0 12px 17px;
   border: 2px solid #e5e5e5;
   border-radius: 4px;
-  font-family: "PT Sans", sans-serif;
+  font-family: "PT Sans", Arial, sans-serif;
   font-size: 18px;
   font-weight: 400;
   line-height: 21px;
   background: url(../img/arrow-select.svg) no-repeat right 20px center;
   appearance: none;
   -webkit-appearance: none;
+  transition: border-color 0.3s;
+}
+.catalog__select:hover {
+  border-color: #68a2ca;
+  cursor: pointer;
+}
+.catalog__select:disabled {
+  border-color: rgba(0, 0, 0, 0.3);
+  color: rgba(0, 0, 0, 0.3);
 }
 .catalog__buttons {
   display: flex;
@@ -859,8 +966,13 @@ input[type="number"]:focus {
   align-items: center;
   justify-content: center;
 }
-.sort-buttons__item--active {
+.sort-buttons__item--active,
+.sort-buttons__item:hover,
+.sort-buttons__item:active {
   border-color: #000000;
+}
+.sort-buttons__item:focus-visible {
+  border-color: #68a2ca;
 }
 .catalog-list {
   margin-top: 40px;
@@ -871,9 +983,12 @@ input[type="number"]:focus {
   border-bottom: 1px solid #e5e5e5;
 }
 .catalog-list__item {
-  padding: 19px 20px 18px 20px;
+  padding: 19px 19px 18px 19px;
   border: 1px solid #e5e5e5;
   border-radius: 4px;
+}
+.catalog-list__link {
+  display: block;
 }
 .catalog-list__title {
   margin: 12px 0 0 0;
@@ -886,7 +1001,7 @@ input[type="number"]:focus {
   display: flex;
   justify-content: space-between;
   gap: 20px;
-  margin-top: 16px;
+  margin-top: 15px;
 }
 .catalog-list__desc {
   margin: 0;
@@ -896,8 +1011,8 @@ input[type="number"]:focus {
 .catalog-list__buttons {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  gap: 20px;
-  margin-top: 16px;
+  gap: 19px 20px;
+  margin-top: 15px;
 }
 .catalog-list__buttons .button {
   padding: 8px 18px;
@@ -946,8 +1061,12 @@ input[type="number"]:focus {
   justify-content: center;
   align-items: center;
 }
-.pagination__link:hover {
+.pagination__link:hover,
+.pagination__link:focus {
   background-color: #68a2ca;
+}
+.pagination__link:active {
+  color: rgba(255, 255, 255, 0.3);
 }
 .pagination-item-active .pagination__link {
   color: #000000;
@@ -972,6 +1091,6 @@ input[type="number"]:focus {
 .page-subcribe .main-subtitle {
   color: #333333;
 }
-.page-subcribe .subcribe-form__wrap input {
+.page-subcribe input {
   background-color: #f2f2f2;
 }
