--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@
   box-shadow: 0 0 15px rgba(0, 1, 1, 0.2);
   position: relative;
 }
-a {
+.page-body a {
   text-decoration: none;
 }
 img {
@@ -92,7 +92,7 @@ img {
   text-transform: uppercase;
   transition: background-color 0.3s;
   cursor: pointer;
-  font-family: "PT Sans";
+  font-family: "PT Sans", Arial, sans-serif;
   text-align: center;
 }
 .button--brown {
@@ -433,7 +433,7 @@ img {
 .footer {
   display: flex;
   justify-content: space-between;
-  align-items: flex-end;
+  align-items: center;
   padding: 45px 70px 35px;
   background-color: #ffffff;
   flex-grow: 0;
@@ -656,7 +656,7 @@ input::placeholder {
   line-height: 20px;
   color: #ffffff;
   text-align: left;
-  font-family: "PT Sans";
+  font-family: "PT Sans", Arial, sans-serif;
   border-radius: 10px;
   top: calc(100% + 15px);
   left: 50%;
@@ -747,7 +747,7 @@ input[type="number"]:focus {
   display: grid;
   grid-template-columns: 151px 151px 1fr 191px;
   justify-content: space-between;
-  gap: 70px;
+  gap: 69px;
 }
 .filter__range {
   padding-left: 70px;
@@ -854,7 +854,7 @@ input[type="number"]:focus {
   line-height: 24px;
   font-weight: 700;
   color: #000000;
-  font-family: "PT Sans";
+  font-family: "PT Sans", Arial, sans-serif;
 }
 .range__name {
   position: absolute;
@@ -936,7 +936,7 @@ input[type="number"]:focus {
   padding: 11px 0 12px 17px;
   border: 2px solid #e5e5e5;
   border-radius: 4px;
-  font-family: "PT Sans", sans-serif;
+  font-family: "PT Sans", Arial, sans-serif;
   font-size: 18px;
   font-weight: 400;
   line-height: 21px;
@@ -1001,7 +1001,7 @@ input[type="number"]:focus {
   display: flex;
   justify-content: space-between;
   gap: 20px;
-  margin-top: 16px;
+  margin-top: 15px;
 }
 .catalog-list__desc {
   margin: 0;
@@ -1011,8 +1011,8 @@ input[type="number"]:focus {
 .catalog-list__buttons {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  gap: 20px;
-  margin-top: 16px;
+  gap: 19px 20px;
+  margin-top: 15px;
 }
 .catalog-list__buttons .button {
   padding: 8px 18px;
@@ -1091,6 +1091,6 @@ input[type="number"]:focus {
 .page-subcribe .main-subtitle {
   color: #333333;
 }
-.page-subcribe .subcribe-form__wrap input {
+.page-subcribe input {
   background-color: #f2f2f2;
 }
